syntax = "proto3";

option go_package = "./user_pb";

message User {
  string user_id = 1;
  string username = 2;
  string password = 3;
  string created_at = 4;
  string updated_at = 5;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse{
  string user_id = 1;
}

message GetUserRequest{
  string user_id = 1;
}

// Here password hash should not included
message GetUserResponse{
  int32 user_id = 1;
  string username = 2;

  string created_at = 4;
  string updated_at = 5;
}

message UpdateUserRequest{
  User user = 1;
}

message UpdateUserResponse {
  int32 user_id = 1;
  string username = 2;

  string created_at = 4;
  string updated_at = 5;
}

message DeleteUserRequest{
  string user_id = 1;
}

message DeleteUserResponse {
  string user_id = 1;
}


service UserService {
  // User CRUD
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}